--- a/src/app/earning/earning.component.html
+++ b/src/app/earning/earning.component.html
@@ -1,1 +1,8 @@
-<p>earning works!</p>
+<div class="row">
+  <div class="col-md-auto">
+    <app-earning-list></app-earning-list>
+  </div>
+  <div class="col-md-auto">
+    <app-earning-detail></app-earning-detail>
+  </div>
+</div>
