--- a/src/app/earningtypes/earningtype-detail/earningtype-detail.component.html
+++ b/src/app/earningtypes/earningtype-detail/earningtype-detail.component.html
@@ -1,1 +1,38 @@
-<p>earningtype-detail works!</p>
+<div class="row">
+  <h3 class="card-text">Earning Type Detail Component:-</h3>
+  <div class="col-xl-12">
+    <img src="#" alt="" class="img-responsive">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h4>Earning Type</h4>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-12">
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle">Manage Earning Type</button>
+      <ul class="dropdown-menu">
+        <li> <a href="#">Add Earning Type</a> </li>
+        <li> <a href="#">Edit Earning Type</a> </li>
+        <li> <a href="#">Delete Earning Type</a> </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-12">
+
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-12">
+    Earning Type
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-12">
+    Created Date
+  </div>
+</div>
