--- a/src/app/earningtypes/earningtypes.component.html
+++ b/src/app/earningtypes/earningtypes.component.html
@@ -1,1 +1,8 @@
-<p>earningtypes works!</p>
+<div class="row">
+  <div class="col-md-auto">
+    <app-earningtypes-list></app-earningtypes-list>
+  </div>
+  <div class="col-md-auto">
+    <app-earningtype-detail></app-earningtype-detail>
+  </div>
+</div>
