--- a/src/app/persons/person-detail/person-detail.component.html
+++ b/src/app/persons/person-detail/person-detail.component.html
@@ -1,1 +1,39 @@
-<p>person-detail works!</p>
+<div class="row">
+  <h3 class="card-text">Person Detail Component:-</h3>
+  <div class="col-xl-12">
+    <img src="#" alt="" class="img-responsive">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h4>Person Name:- {{person.FullName}}</h4>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-12">
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle">Manage Person</button>
+      <ul class="dropdown-menu">
+        <li> <a href="#">Add Person</a> </li>
+        <li> <a href="#">Edit Person</a> </li>
+        <li> <a href="#">Delete Person</a> </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-12">
+    BirthDate:{{person.BirthDate}}
+  </div>
+
+</div>
+<div class="row">
+  <div class="col-xl-12">
+    Email:- {{person.Email}}
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-12">
+    Gender:{{person.Sex}}
+  </div>
+</div>
