--- a/src/app/earning/earning-detail/earning-detail.component.html
+++ b/src/app/earning/earning-detail/earning-detail.component.html
@@ -1,1 +1,59 @@
-<p>earning-detail works!</p>
+<div class="row">
+  <h3 class="card-text">Earning Detail Component:-</h3>
+  <div class="col-xl-12">
+    <img src="#" alt="" class="img-responsive">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h4>Earnings</h4>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-12">
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle">Manage Earning Type</button>
+      <ul class="dropdown-menu">
+        <li> <a href="#">Add Earning</a> </li>
+        <li> <a href="#">Edit Earning</a> </li>
+        <li> <a href="#">Delete Earning</a> </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xl-12">
+    <div class="row">
+      <div class="col-xl-12">
+        Earning Type
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-12">
+        Person Name
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-12">
+        Earn Amount
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-12">
+        Earning Comment
+      </div>
+    </div>
+
+      <div class="row">
+        <div class="col-xl-12">
+        Create Date
+        </div>
+      </div>
+    <div class="row">
+      <div class="col-xl-12">
+        Doc URL
+      </div>
+    </div>
+
+</div>
+</div>
